[package]
name = "fakey_cognito"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_json = "1.0"
serde_yaml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
bytes = "1.1"
warp = "0.3"
tokio = { version = "1.11", features = ["full"] }
tera = "1.12"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hyper = "0.14"
strum = "0.23"
strum_macros = "0.23"
once_cell = "1.8"
pyo3 = { version = "0.15", features = ["auto-initialize"] }
heck = "0.4"
validator = { version = "0.14", features = ["derive"] }
regex = "1.5"

[dev-dependencies]
pretty_assertions = "1.0.0"
difference = "2.0"
