[package]
name = "fakey_cognito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
bytes = "1.5"
warp = "0.3"
tokio = { version = "1.36", features = ["full"] }
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hyper = "1.6"
strum = "0.27"
strum_macros = "0.27"
once_cell = "1.19"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
heck = "0.5"
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

[dev-dependencies]
pretty_assertions = "1.4"
difference = "2.0"
